Added component test for adding an event
